//
//  fintechKidsUITests.swift
//  fintechKidsUITests
//
//  Created by Fredy Leon on 10/11/25.
//

import XCTest
import ViewInspector

final class fintechKidsUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    @MainActor
    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    @MainActor
    func testLaunchPerformance() throws {
        // This measures how long it takes to launch your application.
        measure(metrics: [XCTApplicationLaunchMetric()]) {
            XCUIApplication().launch()
        }
    }
    
    
//    @MainActor
//    func testAllLanguageExistIntoMenu() throws {
//        
//
//        let app = XCUIApplication()
//        app.activate()
//        
//        app/*@START_MENU_TOKEN@*/.images["menu_language"]/*[[".otherElements",".images[\"spain-circle\"]",".images[\"menu_language\"]",".images"],[[[-1,2],[-1,1],[-1,3],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/.firstMatch.tap()
//        app/*@START_MENU_TOKEN@*/.images["france-circle"]/*[[".otherElements.images[\"france-circle\"]",".images[\"france-circle\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.firstMatch.tap()
//        
//        sleep(1)
//        app/*@START_MENU_TOKEN@*/.images["menu_language"]/*[[".otherElements",".images[\"spain-circle\"]",".images[\"menu_language\"]",".images"],[[[-1,2],[-1,1],[-1,3],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/.firstMatch.tap()
//        app.images["italy-circle"].firstMatch.tap()
//        
//        sleep(1)
//        app.images["menu_language"].firstMatch.tap()
//        app.images["england-circle"].firstMatch.tap()
//        
//        sleep(1)
//        app/*@START_MENU_TOKEN@*/.images["menu_language"]/*[[".otherElements",".images[\"spain-circle\"]",".images[\"menu_language\"]",".images"],[[[-1,2],[-1,1],[-1,3],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/.firstMatch.tap()
//        app.images["spain-circle"].firstMatch.tap()
//    }
}
